--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1823,3 +1823,18 @@ section {
     padding-top: 4px;
   }
 }
+
+.boton-whatsapp {
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+  z-index: 999;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.boton-whatsapp:hover {
+  background-color: #25D366;
+}
